[package]
authors = ["Jason NI (nixin) <jason.ni.py@gmail.com>", "Fabrice Desré <fabrice@desre.org>"]
categories = ["asynchronous", "os::unix-apis"]
description = "xterm.js example with Rust Tokio and pty backend server"
edition = "2018"
homepage = "https://github.com/capyloon/wspty/tree/master/"
license = "MIT"
name = "wspty"
readme = "README.md"
repository = "https://github.com/capyloon/wspty"
version = "0.1.2"

[[bin]]
name = "wsptyd"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "1.1.0"
env_logger = "0.9"
futures = "0.3"
futures-util = "0.3.8"
libc = "0.2"
log = "0.4"
nix = "0.25"
pretty-hex = "0.2.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.18"
tungstenite = "0.18"
